test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_int_const.draco
proc main() void : a := 1234567890; corp;

