test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_false_as_identifier.draco
int false;
 
proc main() void : a := 1; corp;
